# text-classifier

./: pyproject.toml
text_classifier/: text-classifier.ipynb
